# WoxCode

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
.hermes/plans/: 2026-06-10_woxcode-architecture.md
src/: App.css  App.tsx  bridge.ts  editorTheme.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  files.rs  fonts.rs  git.rs  lsp.rs  mod.rs  search_content.rs  search_files.rs  session.rs  syntax.rs  terminal.rs
src-tauri/src/services/: lsp.rs  mod.rs  syntax.rs  terminal.rs
src/components/: ActivityBar.tsx  Breadcrumb.tsx  CommandPalette.tsx  ContextMenu.tsx  EditorArea.tsx  EditorTabs.tsx  FileExplorer.tsx  FindReplaceBar.tsx  MarkdownPreview.tsx  ProblemsSidebar.tsx  SearchSidebar.tsx  SettingsPanel.tsx  StatusBar.tsx  TerminalPanel.tsx
src/contexts/: AppContext.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/services/: semanticHighlight.ts
src/utils/: icons.tsx
