[package]
name = "woxcode"
version = "0.1.1"
description = "WoxCode - A high-performance code editor"
authors = ["wooxin"]
edition = "2021"

[lib]
name = "woxcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
walkdir = "2"
portable-pty = "0.8"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
ttf-parser = "0.25"
regex = "1"
